--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
                 <span class="btn btn-light" type="button" id="search"><i
                         class="fa-solid fa-magnifying-glass"></i></span>
             </div>
-            <span class="msg"></span>
         </section>
 
-        <section id="secondSearch">
-            <div id="ingSearch">
+        <section id="tag-container">
+        </section>
+
+        <section id="secondSearch" class="row">
+            <div id="ingSearch" class="col-4">
                 <div>
                     <label for="">Ingrédients</label>
                     <input type="text" placeholder="Rechercher un ingrédient" id="inputIngSearch">
@@ -35,7 +37,7 @@
                 <div class="list-container"></div>
             </div>
 
-            <div id="appSearch">
+            <div id="appSearch" class="col-4">
                 <div>
                     <label for="">Appareils</label>
                     <input type="text" placeholder="Rechercher un appareil" id="inputAppSearch">
@@ -43,7 +45,7 @@
                 <div class="list-container"></div>
             </div>
 
-            <div id="ustSearch">
+            <div id="ustSearch" class="col-4">
                 <div>
                     <label for="">Ustensils</label>
                     <input type="text" placeholder="Rechercher un ustensil" id="inputUstSearch">
