--- a/index.html
+++ b/index.html
@@ -17,11 +17,9 @@
     <main>
         <section class="row">
             <div class="input-group">
-                <input type="text" class="form-control bg-light border-0" id="searchForm"
-                    placeholder="Rechercher une recette" aria-label="Recipient's username"
-                    aria-describedby="button-addon2">
-                <span class="btn btn-light" type="button" id="search"><i
-                        class="fa-solid fa-magnifying-glass"></i></span>
+                <input type="text" id="searchForm" placeholder="Rechercher une recette"
+                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                <i class="fa-solid fa-magnifying-glass"></i>
             </div>
         </section>
 
@@ -29,7 +27,7 @@
         </section>
 
         <section id="secondSearch" class="row">
-            <div id="ingSearch" class="col-4">
+            <div id="ingSearch">
                 <div>
                     <label for="">Ingrédients</label>
                     <input type="text" placeholder="Rechercher un ingrédient" id="inputIngSearch">
@@ -37,7 +35,7 @@
                 <div class="list-container"></div>
             </div>
 
-            <div id="appSearch" class="col-4">
+            <div id="appSearch">
                 <div>
                     <label for="">Appareils</label>
                     <input type="text" placeholder="Rechercher un appareil" id="inputAppSearch">
@@ -45,7 +43,7 @@
                 <div class="list-container"></div>
             </div>
 
-            <div id="ustSearch" class="col-4">
+            <div id="ustSearch">
                 <div>
                     <label for="">Ustensils</label>
                     <input type="text" placeholder="Rechercher un ustensil" id="inputUstSearch">
