--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             <div class="input-group">
                 <input type="text" id="searchForm" placeholder="Rechercher une recette"
                     aria-label="Recipient's username" aria-describedby="button-addon2">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </div>
+                <i class="fa-solid fa-magnifying-glass"></i></input>
         </section>
 
         <section id="tag-container">
@@ -28,27 +27,50 @@
 
         <section id="secondSearch" class="row">
             <div id="ingSearch">
-                <div>
+                <div class="btn-dropdown">
                     <label for="">Ingrédients</label>
-                    <input type="text" placeholder="Rechercher un ingrédient" id="inputIngSearch">
+                    <i class="fa-solid fa-chevron-down"></i>
                 </div>
-                <div class="list-container"></div>
+                <div class="secondSearch hidden">
+                    <div class="input-btn">
+                        <input type="text" placeholder="Rechercher un ingrédient" id="inputIngSearch">
+                        <i class="fa-solid fa-chevron-up"></i>
+                    </div>
+
+                    <div class="list-container"></div>
+                </div>
+
             </div>
 
             <div id="appSearch">
-                <div>
+                <div class="btn-dropdown">
                     <label for="">Appareils</label>
-                    <input type="text" placeholder="Rechercher un appareil" id="inputAppSearch">
+                    <i class="fa-solid fa-chevron-down"></i>
                 </div>
-                <div class="list-container"></div>
+                <div class="secondSearch hidden">
+                    <div class="input-btn">
+                        <input type="text" placeholder="Rechercher un appareil" id="inputAppSearch">
+                        <i class="fa-solid fa-chevron-up"></i>
+                    </div>
+
+                    <div class="list-container"></div>
+                </div>
+
             </div>
 
             <div id="ustSearch">
-                <div>
+                <div class="btn-dropdown">
                     <label for="">Ustensils</label>
-                    <input type="text" placeholder="Rechercher un ustensil" id="inputUstSearch">
+                    <i class="fa-solid fa-chevron-down"></i>
                 </div>
-                <div class="list-container"></div>
+                <div class="secondSearch hidden">
+                    <div class="input-btn">
+                        <input type="text" placeholder="Rechercher un ustensil" id="inputUstSearch">
+                        <i class="fa-solid fa-chevron-up"></i>
+                    </div>
+
+                    <div class="list-container"></div>
+                </div>
             </div>
 
         </section>
