--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-
+    <link rel="shortcut icon" href="./public/image/icone.svg" type="image/x-icon">
     <title>Les petits plats</title>
 </head>
 
@@ -15,20 +15,19 @@
         <img src="./public/image/logo.png" alt="logo">
     </header>
     <main>
-        <section class="row">
+        <section>
             <div class="input-group">
-                <input type="text" id="searchForm" placeholder="Rechercher une recette"
-                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input type="text" id="searchForm" placeholder="Rechercher une recette">
                 <i class="fa-solid fa-magnifying-glass"></i></input>
         </section>
 
         <section id="tag-container">
         </section>
 
-        <section id="secondSearch" class="row">
+        <section id="secondSearch">
             <div id="ingSearch">
                 <div class="btn-dropdown">
-                    <label for="">Ingrédients</label>
+                    <label>Ingrédients</label>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
                 <div class="secondSearch hidden">
@@ -44,7 +43,7 @@
 
             <div id="appSearch">
                 <div class="btn-dropdown">
-                    <label for="">Appareils</label>
+                    <label>Appareils</label>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
                 <div class="secondSearch hidden">
@@ -60,7 +59,7 @@
 
             <div id="ustSearch">
                 <div class="btn-dropdown">
-                    <label for="">Ustensils</label>
+                    <label>Ustensils</label>
                     <i class="fa-solid fa-chevron-down"></i>
                 </div>
                 <div class="secondSearch hidden">
@@ -75,7 +74,7 @@
 
         </section>
 
-        <section id="content-card" class="row">
+        <section id="content-card">
 
         </section>
     </main>
