--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
         <img src="./public/image/logo.png" alt="logo">
     </header>
     <main>
-        <section class="row">
+        <section>
             <div class="input-group">
-                <input type="text" id="searchForm" placeholder="Rechercher une recette"
-                    aria-label="Recipient's username" aria-describedby="button-addon2">
+                <input type="text" id="searchForm" placeholder="Rechercher une recette">
                 <i class="fa-solid fa-magnifying-glass"></i></input>
         </section>
 
         <section id="tag-container">
         </section>
 
-        <section id="secondSearch" class="row">
+        <section id="secondSearch">
             <div id="ingSearch">
                 <div class="btn-dropdown">
                     <label for="">Ingrédients</label>
@@ -75,7 +74,7 @@
 
         </section>
 
-        <section id="content-card" class="row">
+        <section id="content-card">
 
         </section>
     </main>
